--- a/views/partials/displayFiles.ejs
+++ b/views/partials/displayFiles.ejs
@@ -1,32 +1,34 @@
-    <table>
-      <thead>
-        <tr>
-          <th scope="col" class="column-1">Name</th>
-          <th scope="col" class="column-2">Date Modified</th>
-          <th scope="col" class="column-3">File Size</th>
-          <th scope="col" class="column-4">File Type</th>
+<div class="file-dashboard-table">
+  <table>
+    <thead>
+      <tr>
+        <th scope="col" class="column-1">Name</th>
+        <th scope="col" class="column-2">Date Modified</th>
+        <th scope="col" class="column-3">File Size</th>
+        <th scope="col" class="column-4">File Type</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if (locals.folders) { %>
+      <% locals.folders.forEach(folder => { %>
+        <tr onclick="window.location.href = '/folder/<%=folder.id%>'">
+          <th scope = "row" class="table-row-name column-1"><%-folder.icon%> <%= folder.name %></th>
+          <td class="column-2"><%= folder.createdAt %></td>
+          <td class="column-3">-</td>
+          <td class="column-4">Folder</td>
         </tr>
-      </thead>
-      <tbody>
-        <% if (locals.folders) { %> 
-        <% locals.folders.forEach(folder => { %>
-          <tr onclick="window.location.href = '/folder/<%=folder.id%>'">
-            <th scope = "row" class="table-row-name column-1"><%-folder.icon%> <%= folder.name %></th>
-            <td class="column-2"><%= folder.createdAt %></td>
-            <td class="column-3">-</td>
-            <td class="column-4">Folder</td>
-          </tr>
-        <% }) %>
-        <%}%>
-        <% if (locals.files) { %> 
-        <% locals.files.forEach(file => { %>
-          <tr onclick="window.location.href = '/file/<%=file.id%>'">
-            <th scope = "row" class="table-row-name column-1"><%-file.icon%> <div class="truncate-text"><%= file.originalName %></div></th>
-            <td class="column-2"><%= file.uploadedAt %></td>
-            <td class="column-3"><%= file.size %></td>
-            <td class="column-4"><%= file.mimeType %></td>
-          </tr>
-        <% }) %>
-        <%}%>
-      </tbody>
-    </table>
+      <% }) %>
+      <%}%>
+      <% if (locals.files) { %>
+      <% locals.files.forEach(file => { %>
+        <tr onclick="window.location.href = '/file/<%=file.id%>'">
+          <th scope = "row" class="table-row-name column-1"><%-file.icon%> <div class="truncate-text"><%= file.originalName %></div></th>
+          <td class="column-2"><%= file.uploadedAt %></td>
+          <td class="column-3"><%= file.size %></td>
+          <td class="column-4"><%= file.mimeType %></td>
+        </tr>
+      <% }) %>
+      <%}%>
+    </tbody>
+  </table>
+</div>
