--- a/public/style.css
+++ b/public/style.css
@@ -338,8 +338,6 @@ button{
   background-color: var(--muted);
 }
 
-
-
 .file-dashboard-header-left p{
   width: 100%;
 }
@@ -374,10 +372,15 @@ button{
   }
 }
 
-@media (max-width: 500px){
+@media (max-width: 516px){
   .column-2{
     display:none;
   }
+}
+
+.file-dashboard-table{
+  box-sizing: border-box;
+  padding: 0px 8px 0px 8px;
 }
 
 .folder-view-header{
@@ -552,6 +555,10 @@ thead{
   width:16px;
 }
 
+.file-info-card-container{
+  padding: 0px 8px 0px 8px;
+}
+
 .file-info-card{
   justify-self: center;
   max-width:600px;
@@ -566,7 +573,6 @@ thead{
   flex-direction: column;
   align-items:center;
   background-color: var(--background);
-  
 }
 
 .copy-status{
@@ -1012,9 +1018,13 @@ thead{
 /* --------------------------------------*/
 
 .features-container{
+  width:100%;
+  max-width: 1200px;
+  justify-self: center;
   padding:0px 1rem;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding-bottom:32px;
+  box-sizing: border-box;
 }
 
 .features-title h2{
